--- a/MyFirstPod.yml
+++ b/MyFirstPod.yml
@@ -1,19 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: web-pod
+  name: nginx
   namespace: web
 spec:
   containers:
-  - name: cont-nginx
+  - name: conteneur-nginx
     image: nginx
-    resources:
-      requests:
-        memory: "100Mi"
-        cpu: "1"
-      limits:
-        memory: "200Mi"
-        cpu: "1"
     command: ["nginx"]
     args: ["-g", "daemon off;", "-q"]
     ports:
