--- a/MultiContener/curl.yml
+++ b/MultiContener/curl.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: curl
+  name: curlpod
   namespace: apprdev
 spec:
   containers:
-  - name: centos
-    image: centos
+  - name: curlpod
+    image: radial/busyboxplus:curl
     # resources:
     #   requests:
     #     memory: "100Mi"
@@ -14,7 +14,7 @@ spec:
     #   limits:
     #     memory: "200Mi"
     #     cpu: "1"
-    command: ["curl"]
-    args: ["hello-pod:80"] 
-    ports:
-    - containerPort: 80
+    command:
+    - sh
+    - -c
+    - while true; do sleep1;done
